--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   provider: ^4.3.1
+  http: ^0.12.0+4
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -29,5 +32,6 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    #  - assets/icons/
+    - assets/geodata/
+    - assets/i18n/
     - assets/images/
