--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ description: Flutter project accelerator .
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
-version: 1.0.0+1
+version: 1.1.0+1
 
 environment:
   sdk: '>=2.7.0 <3.0.0'
@@ -14,11 +14,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.3
   provider: ^4.3.1
   http: ^0.12.0+4
   flutter_localizations:
     sdk: flutter
+  # dependency injection
+  get_it: ^1.0.3
+  url_launcher: ^5.5.0
 
 dev_dependencies:
   flutter_test:
