--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   # dependency injection
   get_it: ^1.0.3
   url_launcher: ^5.5.0
+  shared_preferences: '>=0.5.7 <2.0.0'
 
 dev_dependencies:
   flutter_test:
